# reactionwheel

./: .gitignore  CMakeLists.txt  stepper.py
cmake/Modules/: Findwiring.cmake  cotire.cmake
src/: .stepper.cpp.swp  CMakeLists.txt  console_parser.hpp  curses.cpp  curses.hpp  drv10975.cpp  drv10975.hpp  drv10975_dir.cpp  enum_bitset.hpp  file.proto  frontend.cpp  frontend.h  i2c.cpp  i2c.hpp  main.cpp  mpu6050.cpp  mpu6050.h  platform.h  precompiled.hpp  stepper.cpp  stepper.h  thread_bus.cpp  thread_bus.h  vector3.h
